--- a/index.html
+++ b/index.html
@@ -297,7 +297,6 @@
            <!-- Column for reviews -->
            <div class="col-md-9">
             <div class="row">
-                            <!-- Full width review -->
                             <div class="col-12">
                                 <div class="client-testi m-1 p-3 shadow rounded bg-white">
                                     <div class="tiny-slide">
@@ -325,7 +324,6 @@
                             </div>
                         </div>
                         <div class="row mt-3">
-                            <!-- Two half-width reviews -->
                             <div class="col-md-6">
                                 <div class="client-testi m-1 p-3 shadow rounded bg-white">
                                     <div class="tiny-slide">
@@ -374,11 +372,10 @@
                     <div class="col-lg-4 col-md-6 col-12 mt-4 pt-2 picture-item" data-groups='["branding"]'>
                         <div class="card border-0 work-container work-classic">
                             <div class="card-body p-0">
-                                <!-- Updated link to open image in lightbox, attempt to mimic the working version -->
                                 <a href="./images/ForestCamp.png" class="lightbox d-inline-block">
                                     <img src="./images/ForestCamp.png" class="img-fluid rounded work-image">
                                 </a>
-                                <div class="content pt-3 d-flex justify-content-center align-items-center" style="padding: 20px;"> <!-- Center content horizontally -->
+                                <div class="content pt-3 d-flex justify-content-center align-items-center" style="padding: 20px;"> 
                                     <div style="padding-right: 20px;"> 
                                         <h5 class="mb-0 text-dark title">CAMPING</h5>
                                         <h6 class="text-muted tag mb-0">OBJ-C</h6>
@@ -396,11 +393,10 @@
                     <div class="col-lg-4 col-md-6 col-12 mt-4 pt-2 picture-item" data-groups='["branding"]'>
                         <div class="card border-0 work-container work-classic">
                             <div class="card-body p-0">
-                                <!-- Updated link to open image in lightbox, attempt to mimic the working version -->
                                 <a href="./images/CyclingApp.png" class="lightbox d-inline-block">
                                     <img src="./images/CyclingApp.png" class="img-fluid rounded work-image">
                                 </a>
-                                <div class="content pt-3 d-flex justify-content-center align-items-center" style="padding: 20px;"> <!-- Center content horizontally -->
+                                <div class="content pt-3 d-flex justify-content-center align-items-center" style="padding: 20px;"> 
                                     <div style="padding-right: 20px;"> 
                                         <h5 class="mb-0 text-dark title">CYCLING</h5>
                                         <h6 class="text-muted tag mb-0">SWIFT</h6>
@@ -417,7 +413,6 @@
                     <div class="col-lg-4 col-md-6 col-12 mt-4 pt-2 picture-item" data-groups='["branding"]'>
                         <div class="card border-0 work-container work-classic">
                             <div class="card-body p-0">
-                                <!-- Updated link to open image in lightbox, attempt to mimic the working version -->
                                 <a href="./images/ChatApp.png" class="lightbox d-inline-block">
                                     <img src="./images/ChatApp.png" class="img-fluid rounded work-image">
                                 </a>
@@ -438,7 +433,7 @@
                     
             <div class="container">
 
-             <div class="section-title mb-2 pb-1 text-center" style="padding-top: 60px;"> <!-- Added top padding -->
+             <div class="section-title mb-2 pb-1 text-center" style="padding-top: 60px;">
     <h5 class="title mb-2">Web Own Projects</h5>
 </div>
 
@@ -446,7 +441,6 @@
                     <div class="col-lg-4 col-md-6 col-12 mt-2 pt-0 picture-item" data-groups='["development"]'>
                         <div class="card border-0 work-container work-classic">
                             <div class="card-body p-0">
-                                <!-- Updated link to open image in lightbox, attempt to mimic the working version -->
                                 <a href="./images/FoodToGoodWeb.png" class="lightbox d-inline-block">
                                     <img src="./images/FoodToGoodWeb.png" class="img-fluid rounded work-image">
                                 </a>
@@ -471,7 +465,6 @@
                     <div class="col-lg-4 col-md-6 col-12 mt-2 pt-0 picture-item" data-groups='["development"]'>
                         <div class="card border-0 work-container work-classic">
                             <div class="card-body p-0">
-                                <!-- Updated link to open image in lightbox, attempt to mimic the working version -->
                                 <a href="./images/WoodenToysWeb.png" class="lightbox d-inline-block">
                                     <img src="./images/WoodenToysWeb.png" class="img-fluid rounded work-image" >
                                 </a>
@@ -496,11 +489,10 @@
                     <div class="col-lg-4 col-md-6 col-12 mt-2 pt-0 picture-item" data-groups='["development"]'>
                         <div class="card border-0 work-container work-classic">
                             <div class="card-body p-0">
-                                <!-- Updated link to open image in lightbox, attempt to mimic the working version -->
                                 <a href="./images/PortfolioWeb.png" class="lightbox d-inline-block">
                                     <img src="./images/PortfolioWeb.png" class="img-fluid rounded work-image">
                                 </a>
-                                <div class="content pt-3 d-flex justify-content-center align-items-center" style="padding: 20px;"> <!-- Center content horizontally -->
+                                <div class="content pt-3 d-flex justify-content-center align-items-center" style="padding: 20px;"> 
                                     <div style="padding-right: 20px;"> 
                                         <h6 class="mb-0">SCSS, HTML, JS</h6>
                                     </div>
@@ -516,7 +508,6 @@
                     <div class="col-lg-4 col-md-6 col-12 mt-2 pt-0 picture-item" data-groups='["development"]'>
                         <div class="card border-0 work-container work-classic">
                             <div class="card-body p-0">
-                                <!-- Updated link to open image in lightbox, attempt to mimic the working version -->
                                 <a href="./images/WordpressFTG.png" class="lightbox d-inline-block">
                                     <img src="./images/WordpressFTG.png" class="img-fluid rounded work-image">
                                 </a>
@@ -538,11 +529,10 @@
                     <div class="col-lg-4 col-md-6 col-12 mt-2 pt-0 picture-item" data-groups='["development"]'>
                         <div class="card border-0 work-container work-classic">
                             <div class="card-body p-0">
-                                <!-- Updated link to open image in lightbox, attempt to mimic the working version -->
                                 <a href="./images/YelpCampWeb.png" class="lightbox d-inline-block" title="Iphone mockup">
                                     <img src="./images/YelpCampWeb.png" class="img-fluid rounded work-image" alt="Iphone mockup">
                                 </a>
-                                <div class="content pt-3 d-flex justify-content-center align-items-center" style="padding: 20px;"> <!-- Center content horizontally -->
+                                <div class="content pt-3 d-flex justify-content-center align-items-center" style="padding: 20px;">
                                     <div style="padding-right: 20px;"> 
                                         <h6 class="mb-0">CSS, HTML, JS</h6>
                                     </div>
@@ -559,11 +549,10 @@
                     <div class="col-lg-4 col-md-6 col-12 mt-2 pt-0 picture-item" data-groups='["development"]'>
                         <div class="card border-0 work-container work-classic">
                             <div class="card-body p-0">
-                                <!-- Updated link to open image in lightbox, attempt to mimic the working version -->
                                 <a href="./images/KeeperWeb.png" class="lightbox d-inline-block" title="Iphone mockup">
                                     <img src="./images/KeeperWeb.png" class="img-fluid rounded work-image">
                                 </a>
-                                <div class="content pt-3 d-flex justify-content-center align-items-center" style="padding: 20px;"> <!-- Center content horizontally -->
+                                <div class="content pt-3 d-flex justify-content-center align-items-center" style="padding: 20px;">
                                     <div style="padding-right: 20px;"> 
                                         <h6 class="mb-0">CSS, REACT</h6>
                                     </div>
@@ -627,13 +616,13 @@
         <!-- Third Row -->
         <div class="row mt-4 pt-2">
             <!-- First photo in the third row -->
-            <div class="col-md-6 picture-item mb-4 mb-md-0" data-groups='["development"]'> <!-- Add bottom margin on mobile -->
+            <div class="col-md-6 picture-item mb-4 mb-md-0" data-groups='["development"]'> 
                 <a href="./images/UIScreens/UX.png" class="lightbox" data-lightbox="gallery" data-title="Image 5">
                     <img src="./images/UIScreens/UX.png" class="img-fluid rounded">
                 </a>
             </div>
             <!-- Second photo in the third row -->
-            <div class="col-md-6 picture-item" data-groups='["development"]'> <!-- No need for mb-4 mb-md-0 if it's the last item -->
+            <div class="col-md-6 picture-item" data-groups='["development"]'> 
                 <a href="./images/UIScreens/Awards.png" class="lightbox" data-lightbox="gallery" data-title="Image 6">
                     <img src="./images/UIScreens/Awards.png" class="img-fluid rounded">
                 </a>
