--- a/index.html
+++ b/index.html
@@ -585,8 +585,8 @@
         <div class="row mt-4 pt-2">
             <!-- First photo in the first row -->
             <div class="col-md-6 picture-item mb-4 mb-md-0" data-groups='["development"]'> 
-                <a href="./images/UIScreens/UIAPP.png" class="lightbox" data-lightbox="gallery" data-title="Image 1">
-                    <img src="./images/UIScreens/UIAPP.png" class="img-fluid rounded">
+                <a href="./images/UIScreens/UIApp.png" class="lightbox" data-lightbox="gallery" data-title="Image 1">
+                    <img src="./images/UIScreens/UIApp.png" class="img-fluid rounded">
                 </a>
             </div>
             <!-- Second photo in the first row -->
