--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
     <html lang="en">
 
     <head>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-L9TQWYJEYB"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-L9TQWYJEYB');
+        </script>
+
         <meta charset="utf-8" />
         <title>Ella Golovinova Portfolio</title>
         <!-- favicon -->
@@ -20,16 +30,6 @@
         <link href="css/colors/default.css" rel="stylesheet" id="color-opt">
         <!--Font Awesome-->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-
-         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-FBYZZN541C"></script>
-        <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        gtag('config', 'G-FBYZZN541C');
-        </script>
 
     </head>
 
