UI screens updated

--- a/index.html
+++ b/index.html
@@ -614,13 +614,29 @@
             </div>
             <!-- Second photo in the first row -->
             <div class="col-md-6 picture-item mb-4 mb-md-0" data-groups='["development"]'> 
-                <a href="./images/UIScreens/Elements.png" class="lightbox" data-lightbox="gallery" data-title="Image 2">
-                    <img src="./images/UIScreens/Elements.png" class="img-fluid rounded">
+                <a href="./images/UIScreens/UIAppPayment.png" class="lightbox" data-lightbox="gallery" data-title="Image 2">
+                    <img src="./images/UIScreens/UIAppPayment.png" class="img-fluid rounded">
                 </a>
             </div>
         </div>
+
+               <!-- Second Row -->
+               <div class="row mt-4 pt-2">
+                <!-- First photo in the first row -->
+                <div class="col-md-6 picture-item mb-4 mb-md-0" data-groups='["development"]'> 
+                    <a href="./images/UIScreens/Elements.png" class="lightbox" data-lightbox="gallery" data-title="Image 1">
+                        <img src="./images/UIScreens/Elements.png" class="img-fluid rounded">
+                    </a>
+                </div>
+                <!-- Second photo in the first row -->
+                <div class="col-md-6 picture-item mb-4 mb-md-0" data-groups='["development"]'> 
+                    <a href="./images/UIScreens/MidjourneyUI.png" class="lightbox" data-lightbox="gallery" data-title="Image 2">
+                        <img src="./images/UIScreens/MidjourneyUI.png" class="img-fluid rounded">
+                    </a>
+                </div>
+            </div>
     
-        <!-- Second Row -->
+        <!-- Third Row -->
         <div class="row mt-4 pt-2">
             <!-- First photo in the second row -->
             <div class="col-md-6 picture-item mb-4 mb-md-0" data-groups='["development"]'> 
@@ -636,7 +652,7 @@
             </div>
         </div>
     
-        <!-- Third Row -->
+        <!-- Forth Row -->
         <div class="row mt-4 pt-2">
             <!-- First photo in the third row -->
             <div class="col-md-6 picture-item mb-4 mb-md-0" data-groups='["development"]'> 
