UI screens updated

--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
         <h4 class="title mb-3">UI/UX Portfolio</h4>
     </div>
     <div class="container">
-        <!-- First Row -->
+        <!-- 1st Row -->
         <div class="row mt-4 pt-2">
             <!-- First photo in the first row -->
             <div class="col-md-6 picture-item mb-4 mb-md-0" data-groups='["development"]'> 
@@ -620,7 +620,7 @@
             </div>
         </div>
 
-               <!-- Second Row -->
+               <!-- 2nd Row -->
                <div class="row mt-4 pt-2">
                 <!-- First photo in the first row -->
                 <div class="col-md-6 picture-item mb-4 mb-md-0" data-groups='["development"]'> 
@@ -635,8 +635,40 @@
                     </a>
                 </div>
             </div>
+
+             <!-- 3rd Row -->
+        <div class="row mt-4 pt-2">
+            <!-- First photo in the second row -->
+            <div class="col-md-6 picture-item mb-4 mb-md-0" data-groups='["development"]'> 
+                <a href="./images/UIScreens/UX_WebMobile.png" class="lightbox" data-lightbox="gallery" data-title="Image 3">
+                    <img src="./images/UIScreens/UX_WebMobile.png" class="img-fluid rounded">
+                </a>
+            </div>
+            <!-- Second photo in the second row -->
+            <div class="col-md-6 picture-item mb-4 mb-md-0" data-groups='["development"]'> 
+                <a href="./images/UIScreens/UX_Mobile.png" class="lightbox" data-lightbox="gallery" data-title="Image 4">
+                    <img src="./images/UIScreens/UX_Mobile.png" class="img-fluid rounded">
+                </a>
+            </div>
+        </div>
+
+         <!-- 4th Row -->
+         <div class="row mt-4 pt-2">
+            <!-- First photo in the second row -->
+            <div class="col-md-6 picture-item mb-4 mb-md-0" data-groups='["development"]'> 
+                <a href="./images/UIScreens/UX_CMS.png" class="lightbox" data-lightbox="gallery" data-title="Image 3">
+                    <img src="./images/UIScreens/UX_CMS.png" class="img-fluid rounded">
+                </a>
+            </div>
+            <!-- Second photo in the second row -->
+            <div class="col-md-6 picture-item mb-4 mb-md-0" data-groups='["development"]'> 
+                <a href="./images/UIScreens/UX_VR.png" class="lightbox" data-lightbox="gallery" data-title="Image 4">
+                    <img src="./images/UIScreens/UX_VR.png" class="img-fluid rounded">
+                </a>
+            </div>
+        </div>
     
-        <!-- Third Row -->
+        <!-- 5th Row -->
         <div class="row mt-4 pt-2">
             <!-- First photo in the second row -->
             <div class="col-md-6 picture-item mb-4 mb-md-0" data-groups='["development"]'> 
@@ -652,14 +684,8 @@
             </div>
         </div>
     
-        <!-- Forth Row -->
+        <!-- 6th Row -->
         <div class="row mt-4 pt-2">
-            <!-- First photo in the third row -->
-            <div class="col-md-6 picture-item mb-4 mb-md-0" data-groups='["development"]'> 
-                <a href="./images/UIScreens/UX.png" class="lightbox" data-lightbox="gallery" data-title="Image 5">
-                    <img src="./images/UIScreens/UX.png" class="img-fluid rounded">
-                </a>
-            </div>
             <!-- Second photo in the third row -->
             <div class="col-md-6 picture-item" data-groups='["development"]'> 
                 <a href="./images/UIScreens/Awards.png" class="lightbox" data-lightbox="gallery" data-title="Image 6">
