--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                                     <div class="flex-1 content ms-3">
                                         <h5 class="title mb-0">iOS Developer and UX designer</h5>
                                         <p class="text-muted mb-0">2 Years Experience</p>
-                                        <p class="text-muted mb-0"><a href="https://www.zemind.ca/" class="text-primary"> ZeMind Game Studio</a> Toronto, ON</p>    
+                                        <p class="text-muted mb-0"> ZeMind Game Studio, Toronto, ON</p>    
                                     </div>
                                 </div>
                                 <div class="d-flex align-items-center p-3 rounded shadow mt-2">
