added link to SquirrelChaser device

--- a/index.html
+++ b/index.html
@@ -296,7 +296,8 @@
                     <div class="col-md-6 d-flex flex-column justify-content-start" style="padding-top: 20px;">
                         <h5><strong>"Squirrel Chaser"</strong></h5>
                         <p>This app provides a quick and effective solution for assessing and improving cognitive performance, including attention, focus, clarity, and reaction time, through visual and auditory input challenges that measure true abilities under stress.</p>
-                        <p>As an iOS developer, I maintained this project by fixing issues and implementing new features, including a music player and Bluetooth connector.</p>
+                        <p>As an iOS developer, I maintained this project by fixing issues and implementing new features, including the software for the Squirrel Tamer Therapy Device, a technology that helps people improve focus and reduce anxiety, with features like Bluetooth connectivity and a music player..</p>
+                        <a href="https://www.wevibin.co/squirrel-tamer" target="_blank">View project</a>
                     </div>
                 </div>
             </div>
